CHANGES

 - samplesheet driver for lims object
 - general tidy-up of the xml lims driver

release 74.4
 - memory leak fix in st::api::lims constructor - move metaprogramming out of the BUILD method

release 74.3
 - children method of the st::api::lims backed up by a lazy-built attribute;
   once children objects are created, their driver peers are cleared
 - new npg url is propagated through the package
 - use updated DBIx::Class::Schema::Loader
 - don't define new constructor now DBIC is Moosified: use BUILD

release 74.2
 - xml specific lims module, st::api::lims, is split into a generic lims wrapper,
   st::api::lims, and xml parser, st::api::lims::xml
 - a new parser/generator for Illumina-style samplesheets,
   npg_tracking::illumina::run::lims::samplesheet
 - bait finder update to cope with white space around bait name RT#334881
 - fixed test failures for Monitor::RunFolder::Staging by making the timeout
   the object is using variable and setting it to a small value in the test;
   this allows for testing a fresh clone

release 74.1
 - improvements and patches to tests
 - apache httpd conf file for running tracking server on centrally supported
   ubuntu precise vm
 - build script extended to deploy wtsi_local folder, which has apache conf files
 - in tests, explicitly clear existing db connection before resetting the tables and loading fixtures;
   otherwise, an very long wait (as set by GLOBAL wait_timeout ) occurs, see RT#336398
   for some reason this wait only occurs on MySQL servers v 5.5.30 and above
 - correct skip message for a test that accesses live reference repository

release 74.0
 - removed unnecessary separate log from apache configuration file

release 73.9
 - cgi scripts that are linked from the main tracking web app are moved to this
     project together with an apache configuration file for servers on sfweb nodes
 - apache configuration file for sfweb nodes updated:
     bed files are not visible